# freq

./: Cargo.toml  LICENSE-APACHE  README.md  freq.example.toml
.github/workflows/: docker.yml  release.yml  rust.yml
fixtures/: sample.txt
src/: client.rs  excludes.rs  lib.rs  main.rs  stats.rs
src/utils/: mod.rs  traverse.rs
tests/: cli.rs
