[package]
name = "freq"
version = "0.1.0"
license = "Apache-2.0/MIT"
authors = ["Matthias Endler <matthias@endler.dev>"]
edition = "2018"
description = "The missing word frequency analyzer"
documentation = "https://github.com/mre/freq/blob/master/README.md"
homepage = "https://github.com/mre/freq"

keywords = [
    "word",
    "frequency",
    "analyzer",
    "histogram",
    "cli",
]

[dependencies]
stopwords = "0.1.1"
