[package]
name = "freq"
version = "0.1.0"
license = "Apache-2.0/MIT"
authors = ["Matthias Endler <matthias@endler.dev>"]
edition = "2018"
description = "The missing word frequency analyzer"
documentation = "https://github.com/mre/freq/blob/master/README.md"
homepage = "https://github.com/mre/freq"

keywords = [
    "word",
    "frequency",
    "analyzer",
    "histogram",
    "cli",
]

[dependencies]
unicode-segmentation = "1.7.1"
anyhow = "1.0.38"
# futures = "0.3.13"
glob = "0.3.0"
regex = "1.4.3"
structopt = "0.3.21"
toml = "0.5.8"
serde = { version = "1.0.123", features = ["derive"] }
derive_builder = "0.9.0"
# deadpool = "0.7.0"
shellexpand = "2.1.0"
# lazy_static = "1.4.0"
serde_json = "1.0.63"
console = "0.14.0"
maplit = "1.0.2"
tempfile = "3.2.0"
stop-words = "0.4.0"

[dependencies.tokio]
features = ["full"]
version = "1.2.0"

[dev-dependencies]
doc-comment = "0.3.3"
